# momlca

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config  config.example
.github/workflows/: ci.yml
artifacts/pretrained/: .gitignore  README.md  isdpainn_random_split_painn_stage_backbone.metadata.yaml  isdpainn_random_split_painn_stage_backbone.pt.dvc
configs/: config.yaml  eval.yaml  train.yaml
configs/baseline/: rf.yaml  xgboost.yaml
configs/callbacks/: default.yaml  model_checkpoint_best.yaml  model_checkpoint_last.yaml
configs/data/: pfasbench.yaml  pfasbench_ood_chain.yaml  pfasbench_ood_headgroup.yaml
configs/experiment/: pfasbench_finetune.yaml  pfasbench_finetune_momlca.yaml
configs/logger/: wandb.yaml
configs/model/: gin.yaml  momlca.yaml  painn.yaml  painn_stage.yaml
configs/train/: default.yaml  multiseed.yaml
data/pfasbench/: processed.dvc
data/pfasbench/raw/: .gitignore  pfasbench.csv.dvc  pfasbench_sample.csv
docs/: BASELINES.md  DATASET.md
notebooks/: .gitkeep
scripts/: add_pka_predictions.py  analyze_family_errors.py  compare_ablations.py  compare_baselines.py  curate_pfasbench.py  generate_pfasbench_data_report.py  prepare_pretrained_backbone.py  train.py
src/: eval.py  train.py
src/gnn/: __init__.py  exceptions.py
src/gnn/baselines/: __init__.py  _base.py  comparison.py  data_utils.py  descriptors.py  dmpnn.py  models.py  protocol.py  random_forest.py  xgboost_baseline.py
src/gnn/data/: __init__.py  validation.py
src/gnn/data/datamodules/: __init__.py  pfasbench.py
src/gnn/data/datasets/: __init__.py  pfasbench.py  registry.py
src/gnn/data/loaders/: __init__.py  sdf.py  smiles.py
src/gnn/data/splits/: __init__.py  pfas_ood.py  scaffold.py
src/gnn/data/transforms/: __init__.py  atom_features.py  bond_features.py  conformer.py  constants.py  featurizer.py  to_pyg.py
src/gnn/evaluation/: __init__.py  ablation.py  comparison.py  confidence_intervals.py  export.py  family_analysis.py  significance.py
src/gnn/evaluation/metrics/: __init__.py  regression.py
src/gnn/models/: __init__.py  momlca_model.py
src/gnn/models/backbones/: __init__.py  base.py  gin.py  painn.py  painn_stage.py  registry.py
src/gnn/models/constraints/: __init__.py  charge.py
src/gnn/models/heads/: __init__.py  charge.py  property.py  registry.py
src/gnn/utils/: __init__.py  registry.py
src/google/: __init__.pyi
src/utils/: __init__.py  callbacks.py  logging_utils.py  multirun.py
tests/: conftest.py  test_configs.py  test_eval.py  test_gnn_package.py  test_logging_utils.py  test_multiseed.py  test_prepare_pretrained_backbone.py  test_train.py
tests/gnn/: __init__.py
tests/gnn/baselines/: test_descriptors.py  test_dmpnn.py  test_integration.py  test_models.py
tests/gnn/data/: test_validation.py
tests/gnn/data/datamodules/: test_pfasbench.py
tests/gnn/evaluation/: test_ablation.py  test_comparison.py  test_confidence_intervals.py  test_export.py  test_family_analysis.py  test_family_analysis_cli.py  test_regression_metrics.py
tests/gnn/models/: test_backbone_interface.py  test_charge_conservation.py  test_charge_head.py  test_momlca_model.py  test_property_head.py
tests/gnn/utils/: test_registry.py
tests/helpers/: pfasbench.py  pretrained_artifacts.py  resume_probe.py  transfer_learning.py
tests/scripts/: test_compare_ablations.py  test_curate_pfasbench.py  test_train.py
(+17 files in other folders)
