[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "momlca"
version = "0.1.0"
description = "MoML-CA: Molecular Machine Learning with GNNs for PFAS Property Prediction"
authors = ["Saketh", "Daniel"]
readme = "README.md"
packages = [{include = "gnn", from = "src"}]
include = ["src/gnn/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
lightning = ">=2.1.0"
torchmetrics = ">=0.11.4"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
omegaconf = "*"
rich = "*"
rootutils = "*"
wandb = "*"
torch-geometric = "*"
rdkit = "*"
pandas = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "4.5.1"
mypy = "1.19.1"
ruff = "0.14.11"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # Line too long - handled by formatter, allow in docstrings
    "E402",  # Module level import not at top - needed for Hydra/rootutils setup
    "B905",  # zip strict parameter - not always needed
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
mypy_path = "src"
explicit_package_bases = true
files = ["src/gnn"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "src.utils.pylogger",
    "src.utils.utils",
    "src.utils.rich_utils",
    "src.utils.logging_utils",
    "src.data.mnist_datamodule",
    "src.models.mnist_module",
    "src.train",
    "src.eval",
]
ignore_errors = true
